5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1811_2563.log
== TEST (2019-06-04 20:31:46) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
j=0
while(size(x)>1):
	for i in x:
	   if(i >= 5 ) and (i < 7):
		h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- ERROR:
File "XXXX", line 8
    h=h+1	
         ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:31:56) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
while(size(x)>1):
	for i in x:
	   if(i >= 5 ) and (i < 7):
		   h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 20:32:21) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
while(size(x)>1):
	h=0
	for i in x:
	   if(i >= 5 ) and (i < 7):
		   h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 20:32:53) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
while(size(x)>1):
	h=0
	for i in x:
	   if(i >= 5 ) and (i < 7):
		   h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- EXECUTION TIME:
1.07603
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 21:20:16) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
while(size(x)>1):
	h=0
	for i in x:
	   if(i >= 5 ) and (i < 7):
		   h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 21:20:19) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
while(size(x)>1):
	h=0
	for i in x:
	   if(i >= 5 ) and (i < 7):
		   h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- EXECUTION TIME:
1.12714
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:33:20) 
-- CODE:
from numpy import*
x=array(eval(input("Digite as medias finais :")))
h=0
while(size(x)>1):
	h=0
	for i in x:
	   if(i >= 5 ) and (i < 7):
		   h=h+1	
	print(h)
	x=array(eval(input("Digite as medias :")))		
-- EXECUTION TIME:
1.02934
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
